<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homepage"
            android:icon="@drawable/img_homepage"
            android:title="@string/homepage" />
        <item
            android:id="@+id/nav_travels"
            android:icon="@drawable/img_travels"
            android:title="@string/travles" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/img_notes"
            android:title="@string/notes" />
        <item
            android:id="@+id/nav_pictures"
            android:icon="@drawable/img_pictures"
            android:title="@string/pictures" />
        <item
            android:id="@+id/nav_position"
            android:icon="@drawable/img_position"
            android:title="@string/position" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/img_account"

                android:title="@string/account" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/img_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_privacytermsofuse"
                android:icon="@drawable/img_privacy"
                android:title="@string/privacytermsofuse" />
            <item
                android:id="@+id/nav_version"
                android:icon="@drawable/img_version"
                android:title="@string/version" />
        </menu>
    </item>

</menu>
