<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:fontFamily="@font/italianbreakfastregular"
        android:textSize="220px"
        android:id="@+id/nameView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/name_versionView"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/version_mywebsiteView"
        android:layout_marginTop="112dp"
        android:text="@string/version"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/number_versionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/version_mywebsiteView"
        android:layout_alignTop="@+id/name_versionView"
        android:text="@string/number_version"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/version_mywebsiteView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:text="@string/nav_header_subtitle"
        android:fontFamily="@font/italianbreakfastregular"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>